name:                ktx-io
version:             0.1.0.0
synopsis:            Read or write data in the KTX (Khronos Texture) format.
description:         Synopsis says it all.
homepage:            https://github.com/rotaerk/ktx-io
license:             BSD3
license-file:        LICENSE
author:              Matthew Stewart
maintainer:          m.scott.stewart@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Codec.Image.Ktx
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010
