name:                ktx-rw
version:             0.1.0.0
synopsis:            Read or write data in the KTX (Khronos Texture) format.
description:         Synopsis says it all.
homepage:            https://github.com/rotaerk/ktx-rw
license:             BSD3
license-file:        LICENSE
author:              Matthew Stewart
maintainer:          m.scott.stewart@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
--    Codec.Image.Ktx
--    Codec.Image.Ktx.Parser
    Codec.Image.Ktx.Types
    Codec.Image.Ktx.Read
    Control.Monad.BinaryRead.Class
    Control.Monad.BinaryRead.File
    Control.Monad.Trans.BufferWriter
    Data.ByteString.Local
  -- other-modules:
  -- other-extensions:
  build-depends:
    attoparsec,
    bytestring,
    containers,
    directory,
    exceptions,
    indexed,
    memory,
    monad-loops,
    singletons,
    tagged-transformer,
    transformers,
    base >=4.11 && <4.12
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wno-missing-pattern-synonym-signatures -Wno-unused-matches

test-suite ktx-rw-test
  type: detailed-0.9
  test-module: Test
  other-modules:
    Properties
  build-depends:
    ktx-rw,
    Cabal,
    directory,
    filepath,
    QuickCheck,
    base >= 4.11 && <4.12
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall
