name:                ktx-rw
version:             0.1.0.0
synopsis:            Read or write data in the KTX (Khronos Texture) format.
description:         Synopsis says it all.
homepage:            https://github.com/rotaerk/ktx-rw
license:             BSD3
license-file:        LICENSE
author:              Matthew Stewart
maintainer:          m.scott.stewart@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Codec.Image.Ktx.Types
    Codec.Image.Ktx.Read
    Control.Monad.BufferWriter
    Control.Monad.FileReader
  other-modules:
    Data.ByteString.Local
  build-depends:
    attoparsec,
    bytestring,
    containers,
    directory,
    exceptions,
    monad-loops,
    mtl,
    base >=4.11 && <4.12
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite ktx-rw-test
  type: detailed-0.9
  test-module: Test
  other-modules:
    Properties
  build-depends:
    ktx-rw,
    Cabal,
    directory,
    filepath,
    QuickCheck,
    base >= 4.11 && <4.12
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall
